add new java opts